--- a/R/DESCRIPTION
+++ b/R/DESCRIPTION
@@ -109,6 +109,103 @@ markers_overview <- function(data_long, ylim=NULL){
   names(res) <- c('Summary', 'Plot')
   
   return(res)}
+  
+  
+
+#' A function that takes as input data in long format, and returns a named list containing the following objects:
+
+#'  -  “Plot_density”: a density plot showing the distribution of the signal intensity values for both the classes. In addition, the function allows the user to set both the y_lim and x_lim values to provide a better visualization.
+#'  -  “ROC”: a ROC curve showing how many real positive samples would be found positive (SE) and how many real negative samples would be found negative (SP) in function of signal threshold. NB: these SE and SP are refereed to the signal intensity threshold considering all the markers together; it is NOT equal to the SE/SP of a single marker/combination found with SE_SP().
+#'  - “Coord”: a dataframe that contains the coordinates of the above described “ROC” (threshold, SP and SE) that have at least a min SE (40 by default) and a min SP (80 by default). These limits can be set manually by specifying min_SE and min_SP.
+
+#' In case of lack of a priori known threshold the user can set set signalthr_prediction= TRUE. 
+#' In this way the function provides a "suggested signal threshold" that corresponds to the median of the singnal threshold values (in "Coord") at which SE/SP are grater or equal to their set minimal values (min_SE and min_SP), 
+#' and it adds this threshold on the "Plot_density" object as a dashed black line. 
+#' The use of the median allows to pick a threshold whose SE/SP are not too close to the limits (min_SE and min_SP), but it is recommended to always inspect "Coord" and choose the most appropriate signal threshold by considering SP, SE and Youden index
+
+#' @param data_long a data.frame in long format returned by CombiROC_long()
+#' @param y_lim a numeric setting the max values of y that will be visualized in the density plot (zoom only, no data loss).
+#' @param x_lim a numeric setting the max values of x that will be visualized in the density plot (zoom only, no data loss).
+#' @param min_SE a numeric that specifies the min value of SE that a threshold must have to be included in $Coord. 
+#' @param min_SP a numeric that specifies the min value of SP that a threshold must have to be included in $Coord. 
+#' @param case_class a character that specifies which of the two classes of the dataset is the case class.
+#' @param signalthr_prediction a boolean that specifies if the density plot will also show the "suggested signal threshold".
+#' @return a named list containing 'Coord' data.frame, 'ROC' and 'Plot_density' plot objects. 
+#' @export
+
+
+markers_distribution <- function(data, min_SE=40, min_SP=80, x_lim=NULL, y_lim=NULL , signalthr_prediction=FALSE, case_class) {
+  
+  if (min_SE==40 & min_SP==80){
+    warning('In $Coord object you will see only the signal threshold values at which SE>=40 and SP>=80 by default. If you want to change this limits, please set min_SE and min_SP')
+  }
+  
+  bin<- rep(NA, length(rownames(data)))
+  for (i in 1:length(rownames(data))){
+    if (data$Class[i] == case_class){bin[i] <- 1}
+    else{bin[i] <- 0}} 
+  bin <- factor(bin)
+
+  
+  rocobj <-roc(data$Values, response=bin, levels=c("0","1"), quiet= TRUE)
+  coord <- coords(rocobj)
+  coord$Youden <- coord$specificity+coord$sensitivity
+  coord$specificity <- round(coord$specificity*100)
+  coord$sensitivity <- round(coord$sensitivity*100)
+  coord <- coord[coord$specificity>=min_SP & coord$sensitivity>=min_SE, ]
+  
+  
+  if (length(coord$threshold)==0){
+    stop(' $Coord object is empty! No signal thresholds contained with SE >= min_SE  AND SP >= min_SP.')}
+
+  
+  if (is.null(x_lim)&is.null(y_lim)) {
+    warning('You can adjust density plot zoom by setting y_lim and x_lim')
+    p<- ggplot(data, aes(x=Values, color=Class)) +
+      geom_density(n=10000) +
+      theme_classic() }
+  
+  else if (is.null(x_lim)&!is.null(y_lim)) {
+    p<- ggplot(data, aes(x=Values, color=Class)) +
+      geom_density(n=10000) +
+      theme_classic()+
+      coord_cartesian(ylim = c(0, y_lim))}
+  
+  else if (!is.null(x_lim)&is.null(y_lim)) {
+    p<- ggplot(data, aes(x=Values, color=Class)) +
+      geom_density(n=10000) +
+      theme_classic()+
+      coord_cartesian(xlim = c(0, x_lim))}
+  
+  else  {
+    p<- ggplot(data, aes(x=Values, color=Class)) +
+      geom_density(n=10000) +
+      theme_classic()+
+      coord_cartesian(xlim = c(0, x_lim), ylim = c(0, y_lim))}
+  
+  if (isFALSE(signalthr_prediction)){
+    res <- p+labs(x = "Signnal intensity", y="Frequency")
+  }
+  
+
+  
+  if (isTRUE(signalthr_prediction)){
+    
+   
+
+   pr <- median(coord$threshold)
+   warning('The suggested signal threshold in $Plot_density is the median of the signal thresholds at which SE>=min_SE and SP>=min_SP. This is ONLY a suggestion. Please check if signal threshold is suggested by your analysis kit guidelines instead, and remember to check $Plot_density to better judge our suggested threshold by inspecting the 2 distributions.')
+    
+    res <- p+geom_vline(aes(xintercept=pr),
+                        color="black", linetype="dashed", size=0.5)+
+     annotate("text", x = pr*0.60, y = 0, label =  as.character(round(pr)))+
+      labs(x = "Signal intensity", y="Frequency")}
+  
+  robj <- list(res, coord, ggroc(rocobj))
+  names(robj) <- c('Plot_density', 'Coord', 'ROC')
+  return(robj)}
+
+
 
 #' A function that computes the marker combinations and counts their corresponding positive samples for each class (once thresholds are selected).
 #' A sample, to be considered positive for a given combination, must have a value higher than a given signal threshold (signalthr) for at least a given number of markers composing that combination (combithr).
@@ -226,32 +323,36 @@ SE_SP <- function(data, combinations_table){
 #' @export
 
 
+
 ranked_combs <- function(data, combo_table, case_class, min_SE=0, min_SP=0) {
   
   nclass <- unique(data$Class) # to retrieve the 2 classes
   
-  if (case_class == nclass[1]) {  # if case class is the first
+  # if case class is the first
+  if (case_class == nclass[1]) {
     
-    combo_table$score<-  2*(combo_table[,1] * combo_table[,4])/(combo_table[,1] + combo_table[,4]) # computing as 2*(SE 1st class * SP 2nd class) /  (SE 1st class + SP 2nd class)
-    
-    ranked_SE_SP<-combo_table[order(-combo_table$score), ]  
+    # computing F1 as 2*(SE 1st class * SP 2nd class) /  (SE 1st class + SP 2nd class)
+    combo_table$Youden<-  combo_table[,1] + combo_table[,4]
+    combo_table$Youden<-combo_table$Youden/100
+    ranked_SE_SP<-combo_table[order(-combo_table$Youden), ]  
     ranked_SE_SP<- ranked_SE_SP[,c(1,4,5,6)]
     return(ranked_SE_SP[ranked_SE_SP[,1]>=min_SE & ranked_SE_SP[,2]>=min_SP,])}
   
   
   
-  else if (case_class == nclass[2]) {  # if case class is the second
+  # if case class is the second
+  else if (case_class == nclass[2]) {
     
-    combo_table$score <-  2*(combo_table[,2] * combo_table[,3])/(combo_table[,2] + combo_table[,3])  # computing score as 2*(SE 2nd class * SP 1st class) /  (SE 2nd class + SP 1st class)
-   
-    ranked_SE_SP<-combo_table[order(-combo_table$score), ]  
+    # computing F1 as 2*(SE 2nd class * SP 1st class) /  (SE 2nd class + SP 1st class)
+    combo_table$Youden<-combo_table[,2] + combo_table[,3]
+    combo_table$Youden<-combo_table$Youden/100
+    ranked_SE_SP<-combo_table[order(-combo_table$Youden), ]  
     ranked_SE_SP<- ranked_SE_SP[,c(2,3,5,6)]
     return(ranked_SE_SP[ranked_SE_SP[,1]>=min_SE & ranked_SE_SP[,2]>=min_SP,])}
   
   else {
     stop('Please, specify the "case class" choosing from the 2 classes of your dataset')
-  }}
- 
+  }} 
 
 
 #' A function to compute General Linear Model (binomial) and the corresponding ROC curves for each selected combination. 
@@ -259,7 +360,6 @@ ranked_combs <- function(data, combo_table, case_class, min_SE=0, min_SP=0) {
 #' @param markers_table a data.frame with ranked combination, reporting: SE, SP, number of markers composing the combination and the score (returned by ranked_combs()).
 #' @param selected_combinations a numeric vector that specifies the combinations of interest. 
 #' @param case_class a character that specifies which of the two classes of the dataset is the case class.
-#' @param direction a character that specifies in which direction to make the comparison. Direction can be set (not mandatory) in order to specify if the number of cases is <= (‘<’) or >= (‘>’) the number of controls. Otherwise the direction will be automatically set (default= ‘auto’), defining the group in which the median is higher as case group (see pROC::roc() documentation).
 #' @return a named list containing 3 objects:
 
 #' - "Plot": a ggplot object with the ROC curves of the selected combinations.
@@ -268,7 +368,9 @@ ranked_combs <- function(data, combo_table, case_class, min_SE=0, min_SP=0) {
 #' 
 #' @export
 
-ROC_reports <- function(data, markers_table, selected_combinations, case_class,  direction = "auto"){ # to binarize $Class 
+
+ROC_reports <- function(data, markers_table, selected_combinations=NULL, single_markers=NULL, case_class){
+  # to binarize $Class 
   bin<- rep(NA, length(rownames(data)))
   for (i in 1:length(rownames(data))){
     if (data$Class[i] == case_class){bin[i] <- 1}
@@ -276,60 +378,71 @@ ROC_reports <- function(data, markers_table, selected_combinations, case_class, 
   bin <- factor(bin)
   data$Class <- bin
   
+  tab <- markers_table
   
   roc_list <- list() # It will contain ROC objects
   model_list <- list()
   
-  perfwhole <-  data.frame(matrix(0, ncol = 12, nrow = length(selected_combinations))) # 0s dataframe to be filled
+  
+  if (is.null(selected_combinations)){
+    sc<- single_markers}
+  if (!is.null(selected_combinations)){
+  sc<- selected_combinations + (length(colnames(data))-2)}
+ if (!is.null(single_markers)){
+  for (i in 1:length(single_markers)){
+  single_markers[i] <- which(rownames(mks)== single_markers[i])
+  }
+  sc <- as.numeric(union(single_markers,sc))
+ }
   
   
+  AUC <- rep(0, length(sc))
   
-  for ( i in selected_combinations){# for each combination
-    m <-str_split(mks$Markers[i],"-") # extract single markers from combination
-    
-    for (x in m){ # for each composing marker
+  # 0s dataframe to be filled
+  perfwhole <-  data.frame(matrix(0, ncol = 10, nrow = length(sc)))
+
+  
+  # for each combination
+  for ( i in sc){
+    m <-str_split(tab$Markers[i],"-") # extract single markers from combination
+    # for each composing marker
+    for (x in m){ 
       y <- paste("log(",x,"+1)",sep="")} # partial formula
     
     str <- paste(y, collapse = '+')
     fla <- formula(paste("Class ~",str)) # whole formula
     
-    glm.combo<-glm(fla,data=data, family="binomial")  # apply the glm model
-    model_list[[which(selected_combinations==i)]]<- glm(fla,data=data, family="binomial")
-    names(model_list)[which(selected_combinations==i)] <- rownames(mks)[i]
+    model_list[[which(sc==i)]]<- glm(fla,data=data, family="binomial")
+    names(model_list)[which(sc==i)] <- rownames(tab)[i]
+    
+    # storing the ROC object by naming it with the corresponding combination 
+    roc_list[[which(sc==i)]]<-roc(data$Class,model_list[[which(sc==i)]]$fitted.values,levels=c("0","1"), quiet= TRUE)
+    names(roc_list)[which(sc==i)] <- rownames(tab)[i]
     
     
-    roc_list[[which(selected_combinations==i)]]<-roc(data$Class,glm.combo$fitted.values,levels=c("0","1"), direction=direction, quiet = FALSE) # storing the ROC object by naming it with the corresponding combination 
-    names(roc_list)[which(selected_combinations==i)] <- rownames(mks)[i]
-    roc_obj <-roc_list[[which(selected_combinations==i)]]
+    # retrieving metrics
+    optcoordinates<-coords(roc_list[[which(sc==i)]], "best", ret=c("threshold", "specificity",  "sensitivity", "accuracy","tn", 
+                                                  "tp", "fn", "fp", "npv", "ppv"))
     
+
+    
+    # adding a row containing a combination metrics to perfwhole dataframe 
+    perfwhole[which(sc==i),] <- optcoordinates[1,]
+
+    rownames(perfwhole)[which(sc==i)] <- rownames(tab)[i]
   
-    optcoordinates<-coords(roc_obj, "best", ret=c("threshold", "specificity",  "sensitivity", "accuracy","tn", 
-                                                  "tp", "fn", "fp", "npv", "ppv", 
-                                                  "1-specificity","1-sensitivity", "1-accuracy", "1-npv", "1-ppv"))   # retrieving metrics
-    
-    
-    AUC <- round(roc_obj$auc[1],3)
-    ACC <- round(optcoordinates[[4]],3)
-    ERR <- round((optcoordinates[[8]]+optcoordinates[[7]])/dim(data)[1],3)    #(FP+FN)/P+N
-    TP  <- round(optcoordinates[[6]],3)
-    FP  <- round(optcoordinates[[8]],3)
-    TN  <- round(optcoordinates[[5]],3)
-    FN  <- round(optcoordinates[[7]],3)
-    PPV <- round(optcoordinates[[10]],3)
-    NPV <- round(optcoordinates[[9]],3)
-    
-    perfwhole[which(selected_combinations==i),] <- cbind(round(optcoordinates[[1]],3),round(optcoordinates[[3]],3),round(optcoordinates[[2]],3),AUC,ACC,ERR,TP,FP,TN,FN,PPV,NPV) # adding a row containing a combination metrics to perfwhole dataframe 
-    rownames(perfwhole)[which(selected_combinations==i)] <- rownames(mks)[i]
-  }
+    AUC[which(sc==i)] <- roc_list[[which(sc==i)]]$auc[1]
+    }
+  colnames(perfwhole)<-c("CutOff","SP","SE","ACC","TN","TP","FN","FP","NPV","PPV")
+  perfwhole <- mutate(perfwhole, AUC = AUC)
+  perfwhole <- perfwhole[,c(11,3,2,1,4,5,6,7,8,9,10)]
   
-  colnames(perfwhole)<-c("CutOff","SE","SP","AUC","ACC","ERR","TP","FP","TN","FN","PPV","NPV")
   p <- ggroc(roc_list)
-  res<-list(p,data.frame(perfwhole), model_list)
+  res<-list(p,round(perfwhole,3), model_list)
   
   names(res) <- c('Plot', 'Metrics', 'Models')
   
   return(res)}
-
 
 
 #' A function to show the composition of combinations of interest.
