--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,10 +14,12 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Depends:
+Imports:
     tidyr,
     dplyr,
     ggplot2,
     gtools,
     pROC,
-    stringr
+    stringr,
+    stats,
+    utils
