--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,16 @@ export(markers_distribution)
 export(markers_overview)
 export(ranked_combs)
 export(show_markers)
+import(dplyr)
+import(ggplot2)
+import(gtools)
+import(pROC)
+import(stringr)
+importFrom(stats,formula)
+importFrom(stats,glm)
+importFrom(stats,median)
+importFrom(stats,predict)
+importFrom(stats,quantile)
+importFrom(stats,sd)
+importFrom(tidyr,pivot_longer)
+importFrom(utils,read.table)
