--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Authors@R:
   c(person(given = "Ivan",
            family = "Ferrari",
            role = "aut",
-           email = "ferrari@ingm.org"),
+           email = "ferrari@ingm.org",
+           comment = c(ORCID = "0000-0003-3746-4143")),
     person(given = "Riccardo",
            family = "Rossi",
            role = c("aut", "cre"),
