--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,4 +35,11 @@ Imports:
     pROC,
     stringr,
     stats,
-    utils
+    utils,
+    devtools
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
+Depends: 
+    R (>= 2.10)
