--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,6 @@
 Package: combiroc
 Title: Taming Combinations of Biomarkers
+Date: 05/20/2021
 Version: 0.1.0
 Authors@R: 
   c(person(given = "Ivan",
