--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,9 +11,11 @@ export(ranked_combs)
 export(roc_reports)
 export(se_sp)
 export(show_markers)
+export(single_markers_statistics)
 import(dplyr)
 import(ggplot2)
 import(gtools)
+import(moments)
 import(pROC)
 import(stringr)
 importFrom(stats,formula)
