--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: combiroc
-Title: Taming Combinations of Biomarkers
+Title: Combinatorial Selection of Biomarkers Made Easy
 Date: 05/20/2021
 Version: 0.1.0
 Authors@R: 
@@ -22,7 +22,7 @@ Authors@R:
            role = c("ccp", "dtc"),
            email = "bombaci@ingm.org",
            comment = c(ORCID = "0000-0002-9887-4165")))
-Description: Easily and Powerfully Calculates Specificity, Sensitivity and ROC Curves of Biomarkers Combinations.
+Description: This package provides functions and a workflow to easily and powerfully calculating specificity, sensitivity and ROC curves of biomarkers combinations.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -45,3 +45,4 @@ Suggests:
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
+URL: https://github.com/ingmbioinfo/combiroc
