--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,8 @@ Imports:
     devtools
 Suggests: 
     knitr,
-    markdown
+    markdown,
+    rmarkdown
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
