changed aut to ctb

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Authors@R:
            comment = c(ORCID = "0000-0002-4964-3264")),
     person(given = "Saveria",
            family = "Mazzara",
-           role = "aut",
+           role = "ctb",
            email = "saveria.mazzara@gmail.com"),
     person(given = "Mauro",
            family = "Bombaci",
