--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "ferrari@ingm.org",
            comment = c(ORCID = "0000-0003-3746-4143")),
-    person(given = "Riccardo",
+    person(given = "Riccardo L.",
            family = "Rossi",
            role = "aut",
            email = "rossi@ingm.org",
