--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -22,3 +22,7 @@ navbar:
     github:
       icon: fab fa-github fa-lg
       href: https://github.com/ingmbioinfo/combiroc
+
+home:
+  sidebar:
+    structure: [links, licence, authors, dev]
