--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,6 +40,7 @@ Imports:
     moments,
     devtools
 Suggests: 
+    testthat (>= 3.0.0),
     knitr,
     markdown,
     rmarkdown
@@ -47,3 +48,4 @@ VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
 URL: https://github.com/ingmbioinfo/combiroc
+Config/testthat/edition: 3
