--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Authors@R:
     person(given = "Saveria",
            family = "Mazzara",
            role = "ctb",
-           email = "saveria.mazzara@gmail.com"),
+           email = "saveria.mazzara@gmail.com",
            comment = c(ORCID = "0000-0003-1799-2360")),
     person(given = "Mauro",
            family = "Bombaci",
