changed title in description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: combiroc
-Title: Combinatorial Selection of Biomarkers Made Easy
+Title: Ranking of omics biomarkers combinations made easy
 Date: 05/20/2021
 Version: 0.1.0
 Authors@R: 
