--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: combiroc
-Title: Ranking of omics biomarkers combinations made easy
+Title: Ranking and selection of omics biomarkers combinations made easy
 Date: 05/20/2021
 Version: 0.1.0
 Authors@R: 
