--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: combiroc
-Title: Ranking and selection of omics biomarkers combinations made easy
+Title: Selection and ranking of omics biomarkers combinations made easy
 Date: 08/10/2021
 Version: 0.2.1
 Authors@R: 
