--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: r
 r:
   - oldrel
   - release
-  - devel
-warnings_are_errors: true
+warnings_are_errors: false
 sudo: required
 cache: packages
