--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,6 +2,7 @@ Package: combiroc
 Title: Selection and ranking of omics biomarkers combinations made easy
 Date: 08/10/2021
 Version: 0.2.1
+Language: en-US
 Authors@R: 
   c(person(given = "Ivan",
            family = "Ferrari",
