--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,7 +45,8 @@ Suggests:
     testthat (>= 3.0.0),
     knitr,
     markdown,
-    rmarkdown
+    rmarkdown,
+    covr
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
