added covr to travis yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ os:
   - linux
 warnings_are_errors: false
 sudo: required
+r_packages:
+  - covr
 after_success:
-  - Rscript -e 'covr::codecov()'
+  - Rscript -e 'library(covr); codecov()'
