--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,4 +51,5 @@ VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
 URL: https://github.com/ingmbioinfo/combiroc
+BugReports: https://github.com/ingmbioinfo/combiroc/issues
 Config/testthat/edition: 3
