--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: combiroc
 Title: Selection and Ranking of Omics Biomarkers Combinations Made Easy
-Date: 08/13/2021
+Date: 2021-08-13
 Version: 0.2.3
 Language: en-US
 Authors@R: 
@@ -24,7 +24,7 @@ Authors@R:
            role = c("ccp", "ctb", "dtc"),
            email = "bombaci@ingm.org",
            comment = c(ORCID = "0000-0002-9887-4165")))
-Description: Combiroc provides functions and a workflow to easily and powerfully calculating specificity, sensitivity and ROC curves of biomarkers combinations.
+Description: Provides functions and a workflow to easily and powerfully calculating specificity, sensitivity and ROC curves of biomarkers combinations. Allows to rank and select multi-markers signatures as well as to find the best performing sub-signatures. The method used was first published as a Shiny app and described in Mazzara et al. (2017) <doi:10.1038/srep45477> and further described in Bombaci & Rossi (2019) <doi:10.1007/978-1-4939-9164-8_16>.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
